--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         Kun luot tyhjän tiedoston, linkkiä klikkaamalla päädyt vain tyhjälle valkoiselle sivulle (=oikein).-->
         <li><a href="harjoituss.html">Harjoitussivu</a></li> 
         <li><a href="(myöhemmin)">Projekti</a></li>
+		<li><a href="file:///C:/Users/Janette/Desktop/jtn/Janette033.github.io/omasivu/omasivu.html">oma eka sivu</a></li>
 		<img src="internet.png" alt="internet">
     </ul>
 </body>
