--- a/omasivu/omasivu.html
+++ b/omasivu/omasivu.html
@@ -11,7 +11,9 @@
 <h1>Tikrun oma sivu<h1>
 </p
 </header>
+<nav>
 <hr>
+<figure>
 <div class="row">
 <div class="column">
 <img src="Tikru.png" alt="kissa" style="width:103%">
@@ -23,18 +25,21 @@
 <img src="Tikru3.png" alt="kissa" style="width:116%">
 </div>
 </div>
+</figure>
 
 <div id="kiva">
 <p><a href="omasivu.html">Tikru</a></p> 
 <p><a href="galleria.html">Galleria</a></p>
 <p><a href="tietoa.html">Tietoa</a></p>
 </div>
+</nav>
 <main>
 <h2>Yleistä tietoa kissoista</h2>
 <p>Hyvinvoiva kissa on aktiivinen ja seurallinen. Kissalla on sisäsyntyinen tarve muun muassa saalistaa tai leikkiä saalistusleikkejä, raapia ja kiipeillä, eivätkä nämä tarpeet häviä, vaikka mahdollisuutta niiden toteuttamiseen ei olisikaan. Jos lajityypillinen käyttäytyminen estyy, kissalla voi ilmetä sijaistoimintoja, turhautumista, stressaantumista ja käytösongelmia. Ongelmakäyttäytyminen on yleensä merkki kissan hoidon tai ravinnon puutteista, kivusta, pelosta, kissan epäjohdonmukaisesta tai väkivaltaisesta kohtelusta, kissan kasvuajan olosuhteista tai aiemmista kokemuksista.</p>
 <h2>Kissan peseminen</h2>
 <p>Pitkäkarvaisen kissan pesu on tarpeen satunnaisesti, sillä pitkä turkki rasvoittuu lyhyttä helpommin. Yleensä pesu enintään joka toinen kuukausi riittää, mutta kissasta riippuen sopiva pesuväli vaihtelee. Myös pitkäkarvainen kissa tulisi siis pestä silloin, kun sen turkki alkaa olla näkyvästi likainen.</p>
 <p>Jos pitkäkarvaisen kissan turkki takkuuntuu helposti, se tulee harjata säännöllisesti. Tarvittaessa takut tulee leikata tai ajella pois, sillä ne estävät kissaa pitämästä itseään puhtaana nuolemalla. Yleensä huolellinen harjaus kerran viikossa auttaa pitämään takut poissa.</p>
+<figure>
 <ul>
 <div id="jee">
  <li> Vältä kissan pään ja korvien kastelemista, jos niiden peseminen ei ole välttämätöntä. Korviin jäävä vesi ja kosteus lisää korvatulehduksen riskiä.</li>
@@ -46,10 +51,24 @@
  <li>Jos kissan turkki on likainen vain yhdellä alueella, voit kastella ja pestä vain kyseisen kohdan.</li>
  </div>
 </ul>
+</figure>
 <h2>Mitä kissa syö</h2>
 <p>Kissa on lihansyöjä, joka tarvitsee elääkseen korkealuokkaisia ja -laatuisia proteiineja ja rasvaa sekä riittävästi vitamiineja ja hivenaineita. Purkkiruoka ja liha sekä lemmikkieläinliikkeiden ja eläinlääkärien myymät kuivaruoat ovat hyviä ravinnonlähteitä.</p>
 <p>Hyvin hoidettu kissa on myös hyvin ja oikein ravittu kissa. Liikunnalla ja oikealla ravinnolla pidät kissasi vireänä ja terveenä ja lisäät sen elinpäiviä.</p>
+<figure>
+<h2>Miksi käyttää semanttisia elementtejä<h2>
+<ol>
+  <li>Autetaan hakukonetta ymmärtämään verkkosivun sisältöä</li>
+  <li>Rakenne on helpompi hahmottaa, kun koodataan</li>
+  <li>Autetaan ruudunlukuohjelmia tulkitsemaan sivun osat</li>
+</ol> 
+</figure>
 </main>
+<footer>
+<div id="kiva">
+<p>sivun alaosa</p>
+<div/>
+</footer>
 </body>
 
-<div id="jee">
+
