--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="harjoituss.html">Harjoitussivu</a></li> 
         <li><a href="(myöhemmin)">Projekti</a></li>
 		<li><a href="omasivu/omasivu.html">oma eka sivu</a></li>
+		li><a href="galleria/galleria/index.html">Galleria-sivun CSS-muotoilu</a></li>
 		<img src="internet.png" alt="internet">
     </ul>
 </body>
