--- a/projekti/projekti.html
+++ b/projekti/projekti.html
@@ -67,9 +67,35 @@
                     </div>
                 </div>
             </div>
-        </section>			
-</section>
+    </section>	
+<div class="section">
+    <div class="title">
+        <h1>Palvelumme</h1>
+    </div>
+    <div class="palvelut">
+        <div class="card">
+            <h2>Suunnittele itse</h2>
+            <p>Eikö mieleistä taulua löydy? Ei hätää, räätälöimme maalaukset
+			juuri sinun toiveidesi mukaan!</p>
+			<p> Voit suunnitella maalaukset meidän nettisivulla helposti ja vaivattomasti.</p>
+            <a href="" class="button">Lue lisää</a>
+        </div>
+        <div class="card">
+            <h2>Me autamme</h2>
+            <p>Autamme sinua löytämään ainutlaatuiset taulut juuri sinun kotiisi tarjoamalla
+			sisustusapua.</p>
+			<p>Voit olla rohkeasti yhteydessä meihin niin me autamme!</p>
+            <a href="" class="button">Lue lisää</a>
+        </div>
+        <div class="card">
+            <h2>Satoja vaihtoehtoja</h2>
+            <p>Netistä tilataan yhä enemmän taidetta, jonka takia tarjoamme
+			laajasti eri vaihtoehtoja.</p>
+			<p>Tutustu nyt isoon ja kattavaan valikoimaamme!</p>
+            <a href="" class="button">Lue lisää</a>
+        </div>
+    </div>
+</div>
 </main>
-
 </body>
 </html>
