--- a/projekti/projekti.html
+++ b/projekti/projekti.html
@@ -39,7 +39,7 @@
             <div class="box-container">
                 <div class="box">
                     <div class="image">
-                        <img src="taideteos1.png" alt="teos">
+                        <img src="taideteos4.png" alt="teos">
                     </div>
                     <div class="content">
                         <h2>Taideteos</h2>
@@ -49,7 +49,7 @@
 
                 <div class="box">
                     <div class="image">
-                        <img src="taideteos2.png" alt="teos">
+                        <img src="taideteos1.png" alt="teos">
                     </div>
                     <div class="content">
                         <h2>Taideteos2</h2>
@@ -75,16 +75,16 @@
     <div class="palvelut">
         <div class="card">
             <h2>Suunnittele itse</h2>
-            <p>Eikö mieleistä taulua löydy? Ei hätää, räätälöimme maalaukset
-			juuri sinun toiveidesi mukaan!</p>
-			<p> Voit suunnitella maalaukset meidän nettisivulla helposti ja vaivattomasti.</p>
+            <p>Netistä tilataan yhä enemmän taidetta, jonka takia tarjoamme
+			laajasti eri vaihtoehtoja.</p>
+			<p>Tutustu nyt isoon ja kattavaan valikoimaamme!</p>
             <a href="" class="button">Lue lisää</a>
         </div>
         <div class="card">
             <h2>Me autamme</h2>
-            <p>Autamme sinua löytämään ainutlaatuiset taulut juuri sinun kotiisi tarjoamalla
-			sisustusapua.</p>
-			<p>Voit olla rohkeasti yhteydessä meihin niin me autamme!</p>
+           <p>Netistä tilataan yhä enemmän taidetta, jonka takia tarjoamme
+			laajasti eri vaihtoehtoja.</p>
+			<p>Tutustu nyt isoon ja kattavaan valikoimaamme!</p>
             <a href="" class="button">Lue lisää</a>
         </div>
         <div class="card">
@@ -96,6 +96,8 @@
         </div>
     </div>
 </div>
+<section class="tietoa">
+
 </main>
 </body>
 </html>
