--- a/projekti/projekti.html
+++ b/projekti/projekti.html
@@ -32,7 +32,7 @@
 	<section id="hero">
 	<div class="container">
 	<div class="info">
-	<a href="#">Osta nyt</a>
+	<a href="projekti/projekti2.html">Osta nyt</a>
 </section>
 <section class="products" id="products">
             <h1 class="heading">Myydyimmät teokset</h1>
@@ -95,8 +95,9 @@
             <a href="" class="button">Lue lisää</a>
         </div>
     </div>
-</div>
 <section class="tietoa">
+
+
 
 </main>
 </body>
