--- a/projekti/projekti.html
+++ b/projekti/projekti.html
@@ -32,7 +32,7 @@
 	<section id="hero">
 	<div class="container">
 	<div class="info">
-	<a href="projekti/projekti2.html">Osta nyt</a>
+	<a href="projekti2.html">Osta nyt</a>
 </section>
 <section class="products" id="products">
             <h1 class="heading">Myydyimmät teokset</h1>
@@ -95,10 +95,33 @@
             <a href="" class="button">Lue lisää</a>
         </div>
     </div>
-<section class="tietoa">
-
-
-
+<div class="tietoa-meistä">
+    <div class="sisältö">
+        <div class="row">
+            <div class="flex">
+                <h1>Meistä</h1>
+                <h3>Mikä LuovaTaide on?</h3>
+                <p>LuovaTaide on taideverkkokauppa, joka tarjoaa
+				satoja erilaisia maalauksia. Lisäksi asiakas voi itse suunnitella
+				maalauksen toiveidensa mukaan. Lisäksi LuovaTaide tarjoaa apua maalausten
+				etsimisessä ja kodin sisustamisessa.</p>
+				<p><strong/>"Osta nyt"</strong> kohdasta pääsee bootstrap sivulle, jossa näkyy tarkemmin taideverkkokaupan
+				valikoima. Bootstrap sivulla on joitain eri juttuja kuin etusivulla, esimerkiksi kirjautumis/rekisteröitymis napit.</p>
+					
+		<ul class="tekniikat">
+			<li><strong>Mitä uusia tekniikoita sivulla on käytetty?</strong></li>
+			<li>-Osiossa "hero" on käytetty
+			"background: linear-gradient(rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0.411)), url('taide.png') no-repeat center / cover;"</li>
+			<li>-Linkeissä ja iconeissa käytetty "transition" ja taideteos kuvissa "transform"</li>
+			<li>-"Osta nyt" painikkeessa käytetty box-shadow</li>
+			<li>-Tehty oma logo osana headeria</li>
+		</ul>
+                <a href="" class="btn">Lue lisää</a>
+            </div>
+            <img src="sisustus.png" alt="sisustus">
+        </div>
+    </div>
+</div>
 </main>
 </body>
 </html>
