--- a/projekti/projekti2.html
+++ b/projekti/projekti2.html
@@ -132,11 +132,11 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <p class="lead">Ainutlaatuinen taideteos, jossa käytetty punaisen, keltaisen,
+		ruskean ja sinisen sävyjä.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+        <img src="art1.png" alt="teos">
       </div>
     </div>
 	</div>
@@ -146,10 +146,10 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <p class="lead">Upea taideteos, jossa mukana sinisen ja tummia sävyjä.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+      <img src="art2.png" alt="teos">
 
       </div>
     </div>
@@ -161,11 +161,11 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <<h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <h2 class="featurette-heading">Taideteos</h2>
+        <p class="lead">Taideteos, jossa on yhdistelty pinkkiä ja sinisen sävyjä.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+      <img src="art3.png" alt="teos">
 
       </div>
     </div>
@@ -176,10 +176,39 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <p class="lead">Taideteos, joka tuo vahvasti punaisen sävyn esiin.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+      <img src="art4.png" alt="teos">
+      </div>
+    </div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-6">
+		<hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Taideteos</h2>
+        <p class="lead">Taideteoksessa yhdistyy kauniisti kolme eri sävyä upealla tavalla.</p>
+      </div>
+      <div class="col-md-5">
+      <img src="art5.png" alt="teos">
+
+      </div>
+    </div>
+	</div>
+	<div class="col-md-6">
+	<hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Taideteos</h2>
+        <p class="lead">Taideteos, joka luotu maanläheisten värien avulla.</p>
+      </div>
+      <div class="col-md-5">
+	<img src="art6.png" alt="teos">
 
       </div>
     </div>
@@ -192,10 +221,10 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <p class="lead">Taideteos, abstraktilla tyylillä ja muutamilla väreillä.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+      <img src="art7.png" alt="teos">
 
       </div>
     </div>
@@ -206,40 +235,10 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <p class="lead">Taideteos, abstraktilla tyylillä, jossa värimaailmana ruskea ja musta.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
-      </div>
-    </div>
-	</div>
-</div>
-<div class="row">
-	<div class="col-md-6">
-		<hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <<h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
-      </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
-      </div>
-    </div>
-	</div>
-	<div class="col-md-6">
-	<hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <<h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
-      </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+      <img src="art8.png" alt="teos">
 
       </div>
     </div>
