--- a/projekti/projekti2.html
+++ b/projekti/projekti2.html
@@ -184,66 +184,95 @@
     </div>
 	</div>
 </div>
-<div class="row">
-	<div class="col-md-6">
-		<hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Taideteoksessa yhdistyy kauniisti kolme eri sävyä upealla tavalla.</p>
-      </div>
-      <div class="col-md-5">
-      <img src="art5.png" alt="teos">
-
-      </div>
-    </div>
-	</div>
-	<div class="col-md-6">
-	<hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Taideteos, joka luotu maanläheisten värien avulla.</p>
-      </div>
-      <div class="col-md-5">
-	<img src="art6.png" alt="teos">
-
-      </div>
-    </div>
-	</div>
 </div>
-<div class="row">
-	<div class="col-md-6">
-		<hr class="featurette-divider">
+ <div class="row">
+	<div class="col-md-4">
+		 <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Taideteos, abstraktilla tyylillä ja muutamilla väreillä.</p>
-      </div>
-      <div class="col-md-5">
-      <img src="art7.png" alt="teos">
-
-      </div>
-    </div>
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                </div>
+                <small class="text-muted">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
 	</div>
-	<div class="col-md-6">
-	<hr class="featurette-divider">
+	<div class="col-md-4">
+		 <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Taideteos, abstraktilla tyylillä, jossa värimaailmana ruskea ja musta.</p>
-      </div>
-      <div class="col-md-5">
-      <img src="art8.png" alt="teos">
-
-      </div>
-    </div>
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                </div>
+                <small class="text-muted">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
 	</div>
+	<div class="col-md-4">
+		 <div class="col">
+          <div class="card shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                </div>
+                <small class="text-muted">9 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+	</div>
+	
 </div>
+   <hr class="col-3 col-md-2 mb-5">
+
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Starter projects</h2>
+        <p>Ready to beyond the starter template? Check out these open source projects that you can quickly duplicate to a new GitHub repository.</p>
+        <ul class="icon-list">
+          <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Bootstrap npm starter</a></li>
+          <li class="text-muted">Bootstrap Parcel starter (coming soon!)</li>
+        </ul>
+      </div>
+
+      <div class="col-md-6">
+        <h2>Guides</h2>
+        <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
+        <ul class="icon-list">
+          <li><a href="../getting-started/introduction/">Bootstrap quick start guide</a></li>
+          <li><a href="../getting-started/webpack/">Bootstrap Webpack guide</a></li>
+          <li><a href="../getting-started/parcel/">Bootstrap Parcel guide</a></li>
+          <li><a href="../getting-started/build-tools/">Contributing to Bootstrap</a></li>
+        </ul>
+      </div>
+    </div>
+</div>
+  <footer class="container">
+    <p class="float-end"><a href="#">Back to top</a></p>
+    <p>&copy; 2017–2021 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </footer>
+
+
+    <script src="../assets/dist/js/bootstrap.bundle.mi
 
 </main>
   </body>
