--- a/projekti/projekti.html
+++ b/projekti/projekti.html
@@ -114,7 +114,6 @@
 			"background: linear-gradient(rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0.411)), url('taide.png') no-repeat center / cover;"</li>
 			<li>-Linkeissä ja iconeissa käytetty "transition" ja taideteos kuvissa "transform"</li>
 			<li>-"Osta nyt" painikkeessa käytetty "box-shadow"</li>
-			<li>-Tehty oma logo osana headeria</li>
 		</ul>
                 <a href="" class="btn">Lue lisää</a>
             </div>
@@ -122,6 +121,9 @@
         </div>
     </div>
 </div>
+<footer>
+<p>Copyright ©2023; Designed by Janette</p>
+</footer>
 </main>
 </body>
 </html>
