--- a/projekti/projekti.html
+++ b/projekti/projekti.html
@@ -75,16 +75,16 @@
     <div class="palvelut">
         <div class="card">
             <h2>Suunnittele itse</h2>
-            <p>Netistä tilataan yhä enemmän taidetta, jonka takia tarjoamme
-			laajasti eri vaihtoehtoja.</p>
-			<p>Tutustu nyt isoon ja kattavaan valikoimaamme!</p>
+            <p>Voit nyt suunnitella omat maalauksesi kätevästi ja helposti
+			meidän nettisivujen kautta.</p>
+			<p>Tutustu nyt mahdollisuuteen suunnitella itse!</p>
             <a href="" class="button">Lue lisää</a>
         </div>
         <div class="card">
             <h2>Me autamme</h2>
-           <p>Netistä tilataan yhä enemmän taidetta, jonka takia tarjoamme
-			laajasti eri vaihtoehtoja.</p>
-			<p>Tutustu nyt isoon ja kattavaan valikoimaamme!</p>
+           <p>Voit olla helposti meihin yhteydessä, niin tarjoamme
+		   sinulle sisustusapua ja apua taulujen etsmisessä.</p>
+			<p>Voit ottaa meihin yhteyttä rohkeasti jo tänään!</p>
             <a href="" class="button">Lue lisää</a>
         </div>
         <div class="card">
