--- a/projekti/projekti.html
+++ b/projekti/projekti.html
@@ -12,20 +12,20 @@
 </head>
 <body>
 	<header>
-		<a href="#" class="logo"><img src="luovataide.png" alt="logo">
-		
+		<a href="#" class="logo"><img src="luovataide.png" alt="logo"></a>
+		<nav>
 		<ul class="navmenu">
 			<li><a href="#">Etusivu</a></li>
 			<li><a href="#">Taideteokset</a></li>
 			<li><a href="#">Taiteilijat</a></li>
 			<li><a href="#">Yhteystiedot</a></li>
 		</ul>
+		</nav>
 			
 		<div class="nav-icon">
     <a href="#"><img src="search.png" alt="search"></a>
     <a href="#"><img src="user.png" alt="user"></a>
     <a href="#"><img src="cart.png" alt="cart"></a>
-	<a href="#"><img src="menu.png" alt="cart"></a>
 </div>
 	</header>
 <main>
@@ -33,9 +33,11 @@
 	<div class="container">
 	<div class="info">
 	<a href="projekti2.html">Osta nyt</a>
+	</div>
+	</div>
 </section>
 <section class="products" id="products">
-            <h1 class="heading">Myydyimmät teokset</h1>
+            <h2 class="heading">Myydyimmät teokset</h2>
             <div class="box-container">
                 <div class="box">
                     <div class="image">
@@ -70,7 +72,7 @@
     </section>	
 <div class="section">
     <div class="title">
-        <h1>Palvelumme</h1>
+        <h2>Palvelumme</h2>
     </div>
     <div class="palvelut">
         <div class="card">
@@ -99,7 +101,7 @@
     <div class="sisältö">
         <div class="row">
             <div class="flex">
-                <h1>Meistä</h1>
+                <h2>Meistä</h2>
                 <h3>Mikä LuovaTaide on?</h3>
                 <p>LuovaTaide on taideverkkokauppa, joka tarjoaa
 				satoja erilaisia maalauksia. Lisäksi asiakas voi itse suunnitella
@@ -112,7 +114,7 @@
 			<li><strong>Mitä uusia tekniikoita sivulla on käytetty?</strong></li>
 			<li>-Osiossa "hero" on käytetty
 			"background: linear-gradient(rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0.411)), url('taide.png') no-repeat center / cover;"</li>
-			<li>-Linkeissä ja iconeissa käytetty "transition" ja taideteos kuvissa "transform"</li>
+			<li>-taideteos kuvissa käytetty "transform"</li>
 			<li>-"Osta nyt" painikkeessa käytetty "box-shadow"</li>
 		</ul>
                 <a href="" class="btn">Lue lisää</a>
