--- a/projekti/projekti2.html
+++ b/projekti/projekti2.html
@@ -11,7 +11,7 @@
   <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>	
  <header>
-    <div class="px-3 py-2 bg-dark text-white">
+    <div class="hd px-3 py-2 bg-dark text-white">
       <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
           <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
@@ -27,25 +27,25 @@
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link text-white">
+              <a href="#" class="text nav-link text-white">
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#speedometer2"/></svg>
                 Suunnittele itse
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link text-white">
+              <a href="#" class="text nav-link text-white">
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#table"/></svg>
                 Tilaukset
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link text-white">
+              <a href="#" class="text nav-link text-white">
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#grid"/></svg>
                 Taideteokset
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link text-white">
+              <a href="#" class="text nav-link text-white">
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#people-circle"/></svg>
                 Yhteystiedot
               </a>
@@ -56,7 +56,7 @@
     </div>
     <div class="px-3 py-2 border-bottom mb-3">
       <div class="container d-flex flex-wrap justify-content-center">
-        <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto">
+        <form class="etsi col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto">
           <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
         </form>
 
@@ -242,29 +242,27 @@
 
     <div class="row">
       <div class="col-md-6">
-        <h2>Starter projects</h2>
-        <p>Ready to beyond the starter template? Check out these open source projects that you can quickly duplicate to a new GitHub repository.</p>
+        <h2>Aloita sisustaminen jo tänään</h2>
         <ul class="icon-list">
-          <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Bootstrap npm starter</a></li>
-          <li class="text-muted">Bootstrap Parcel starter (coming soon!)</li>
+          <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Suunnittele itse</a></li>
+          <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Ota yhteyttä meihin</a></li>
         </ul>
       </div>
 
       <div class="col-md-6">
-        <h2>Guides</h2>
-        <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
+        <h2>Ostajalle</h2>
         <ul class="icon-list">
-          <li><a href="../getting-started/introduction/">Bootstrap quick start guide</a></li>
-          <li><a href="../getting-started/webpack/">Bootstrap Webpack guide</a></li>
-          <li><a href="../getting-started/parcel/">Bootstrap Parcel guide</a></li>
-          <li><a href="../getting-started/build-tools/">Contributing to Bootstrap</a></li>
+          <li><a href="../getting-started/introduction/">Hae taidetta</a></li>
+          <li><a href="../getting-started/webpack/">Taiteilijat</a></li>
+          <li><a href="../getting-started/parcel/">Toimitus</a></li>
+          <li><a href="../getting-started/build-tools/">FAQ ostajalle</a></li>
         </ul>
       </div>
     </div>
 </div>
   <footer class="container">
-    <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; 2017–2021 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    <p class="float-end"><a href="#">Etusivulle</a></p>
+    <p>Copyright ©2023; Designed by Janette <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   </footer>
 
 
