--- a/projekti/projekti.html
+++ b/projekti/projekti.html
@@ -54,7 +54,7 @@
                         <img src="taideteos1.png" alt="teos">
                     </div>
                     <div class="content">
-                        <h2>Taideteos2</h2>
+                        <h2>Taideteos</h2>
                         <div class="price">150,00€</div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                         <img src="taideteos3.png" alt="teos">
                     </div>
                     <div class="content">
-                        <h2>Taideteos3</h2>
+                        <h2>Taideteos</h2>
                         <div class="price">240,00€</div>
                     </div>
                 </div>
