--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
 	<link rel="stylesheet" type="text/css" href="projekti3.css">
-	<link rel="stylesheet" type="text/css" href="custom.css">
+	<link rel="stylesheet" type="text/css" href="oma.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
-  <body>
+<body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>	
  <header>
     <div class="px-3 py-2 bg-dark text-white">
@@ -69,7 +69,7 @@
   </header>
   
   </main>
-  <div class="row">
+  <div class="karuselli row">
 	<div class="col-md-12">
 		<h2><div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -184,7 +184,7 @@
 	</div>
 </div>
 </div>
- <div class="row">
+ <div class="osio3 row">
 	<div class="col-md-4">
 		 <div class="col">
           <div class="card shadow-sm">
@@ -221,6 +221,7 @@
           </div>
         </div>
 	</div>
+
 	<div class="col-md-4">
 		 <div class="col">
           <div class="card shadow-sm">
@@ -274,4 +275,4 @@
     <script src="../assets/dist/js/bootstrap.bundle.mi
 
 </main>
-  </body>
+</body>
