--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         mutta siinä ei tarvitse vielä lukea mitään. Jos tiedostoa ei ole seuraa virheilmoitus (=väärin). 
         Kun luot tyhjän tiedoston, linkkiä klikkaamalla päädyt vain tyhjälle valkoiselle sivulle (=oikein).-->
         <li><a href="harjoituss.html">Harjoitussivu</a></li> 
-        <li><a href="projekti/projekti.html">Projekti</a></li>
+        <li><a href="projekti/projekti.html">Projekti <strong>("Osta nyt" napista pääsee bootstrapsivulle tai tästä: <a href="projekti/projekti2.html">Bootstrapsivu</a>)</a></li>
 		<li><a href="omasivu/omasivu.html">oma eka sivu</a></li>
 		<li><a href="galleria/galleria/index.html">Galleria-sivun CSS-muotoilu</a></li>
 		<li><a href="desing-tehtava-versio-2/index.html">Design-tehtävä</a></li>
