--- a/projekti/projekti2.html
+++ b/projekti/projekti2.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="projekti3.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="custom.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Cormorant+Garamond:ital,wght@0,300;1,400&family=Jost:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>	
@@ -21,7 +24,7 @@
 
           <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
             <li>
-              <a href="#" class="nav-link text-secondary">
+              <a href="#" class="text nav-link text-white">
                 <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#home"/></svg>
                 Etusivu
               </a>
@@ -57,21 +60,21 @@
     <div class="px-3 py-2 border-bottom mb-3">
       <div class="container d-flex flex-wrap justify-content-center">
         <form class="etsi col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto">
-          <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+          <input type="search" class="etsi form-control" placeholder="Etsi..." aria-label="Search">
         </form>
 
-        <div class="text-end">
-          <button type="button" class="btn btn-light text-dark me-2">Kirjaudu sisään</button>
-          <button type="button" class="btn btn-primary">Rekisteröidy</button>
+        <div class="napit">
+          <button type="button" class="kirjaudu btn btn-light text-dark me-2">Kirjaudu sisään</button>
+          <button type="button" class="rekisteröidy btn btn-primary">Rekisteröidy</button>
         </div>
       </div>
     </div>
   </header>
   
-  </main>
+  <main>
   <div class="row">
 	<div class="col-md-12">
-		<h2><div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+		<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -83,10 +86,10 @@
      
 
         <div class="container">
-          <div class="carousel-caption text-start">
+          <div class="tekstit carousel-caption text-start">
             <h1>Rekisteröidy nyt</h1>
             <p>Voit seurata tilaustasi helposti tekemällä käyttäjätilin.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Luo tili tänään</a></p>
+            <p><a class="nappula btn btn-lg btn-primary" href="#">Luo tili tänään</a></p>
           </div>
         </div>
       </div>
@@ -94,11 +97,11 @@
 	   <img src="taide3.png" alt="teos">
       
         <div class="container">
-          <div class="carousel-caption">
+          <div class="tekstit carousel-caption">
             <h1>Suunnittele itse</h1>
             <p>Eikö sopivaa maalausta löydy? Räätälöimme upeat ja ainutalaatuiset taulut
 			juuri sinun toiveidesi mukaan.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Lue lisää</a></p>
+            <p><a class="nappula btn btn-lg btn-primary" href="#">Lue lisää</a></p>
           </div>
         </div>
       </div>
@@ -106,10 +109,10 @@
        <img src="taide1.png" alt="teos">
 
         <div class="container">
-          <div class="carousel-caption text-end">
+          <div class="tekstit carousel-caption text-end">
             <h1>Satoja eri maalauksia tarjolla</h1>
             <p>Tarjoamme laajan valikoiman eri kokoisia maalauksia</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Selaa valikoimaa</a></p>
+            <p><a class="nappula btn btn-lg btn-primary" href="#">Selaa valikoimaa</a></p>
           </div>
         </div>
       </div>
@@ -122,17 +125,17 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div></h2>
+  </div>
 	</div>
 </div>
-<div class="row">
+<h2 class="taideteokset">Taideteokset</h2>
+<div class="osio2 row">
 	<div class="col-md-6">
 		<hr class="featurette-divider">
-
-    <div class="row featurette">
+    <div class="osio row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Ainutlaatuinen taideteos, jossa käytetty punaisen, keltaisen,
+        <h2 class="otsikko featurette-heading">Taideteos</h2>
+        <p class="kuvailu lead">Ainutlaatuinen taideteos, jossa käytetty punaisen, keltaisen,
 		ruskean ja sinisen sävyjä.</p>
       </div>
       <div class="col-md-5">
@@ -143,10 +146,10 @@
 	<div class="col-md-6">
 	<hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="osio row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Upea taideteos, jossa mukana sinisen ja tummia sävyjä.</p>
+        <h2 class="otsikko featurette-heading">Taideteos</h2>
+        <p class="kuvailu lead">Upea taideteos, jossa mukana sinisen ja tummia sävyjä.</p>
       </div>
       <div class="col-md-5">
       <img src="art2.png" alt="teos">
@@ -159,10 +162,10 @@
 	<div class="col-md-6">
 		<hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="osio row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Taideteos, jossa on yhdistelty pinkkiä ja sinisen sävyjä.</p>
+        <h2 class="otsikko featurette-heading">Taideteos</h2>
+        <p class="kuvailu lead">Taideteos, jossa on yhdistelty pinkkiä ja sinisen sävyjä.</p>
       </div>
       <div class="col-md-5">
       <img src="art3.png" alt="teos">
@@ -173,10 +176,10 @@
 	<div class="col-md-6">
 	<hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="osio row featurette">
       <div class="col-md-7">
-        <h2 <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Taideteos, joka tuo vahvasti punaisen sävyn esiin.</p>
+        <h2 <h2 class="otsikko featurette-heading">Taideteos</h2>
+        <p class="kuvailu lead">Taideteos, joka tuo vahvasti punaisen sävyn esiin.</p>
       </div>
       <div class="col-md-5">
       <img src="art4.png" alt="teos">
@@ -185,14 +188,15 @@
 	</div>
 </div>
 </div>
- <div class="row">
+ <div class="osio3 row">
+ <h2 class="kokonaisuudet">Tutustu erilaisiin kokonaisuuksiin</h2>
 	<div class="col-md-4">
 		 <div class="col">
           <div class="card shadow-sm">
           <img src="artt1.png" alt="teos">
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Kolme ainutalaatuista ja upeaa kolmion muotoista maalausta, joilla luot uniikin sisustuksen. Tutustu sarjaan nyt!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">Katso</button>
@@ -209,7 +213,7 @@
          <img src="artt2.png" alt="teos">
 
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Tämän ison maalauksen voit yhdistää monen eri muun taulun kanssa. Katso lisää miten voit yhdistää maalauksia!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">Katso</button>
@@ -225,7 +229,7 @@
           <div class="card shadow-sm">
           <img src="artt3.png" alt="teos">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Meiltä löydät erilaiset kolmen maalauksen kokonaisuudet kotiisi. Katso kokonaisuudet!</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">Katso</button>
@@ -240,10 +244,10 @@
 </div>
    <hr class="col-3 col-md-2 mb-5">
 
-    <div class="row">
+    <div class="viimeinen row">
       <div class="col-md-6">
-        <h2>Aloita sisustaminen jo tänään</h2>
-        <ul class="icon-list">
+        <h2>Sisusta jo tänään</h2>
+        <ul class="lista icon-list">
           <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Suunnittele itse</a></li>
           <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Ota yhteyttä meihin</a></li>
         </ul>
@@ -260,15 +264,11 @@
       </div>
     </div>
 </div>
-  <footer class="container">
+</main>
+ <footer class="container">
     <p class="float-end"><a href="#">Etusivulle</a></p>
     <p>Copyright ©2023; Designed by Janette <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-  </footer>
-
-
-    <script src="../assets/dist/js/bootstrap.bundle.mi
-
-</main>
-  </body>
+ </footer>
+</body>
 
 
