--- a/projekti/projekti.html
+++ b/projekti/projekti.html
@@ -97,6 +97,7 @@
             <a href="" class="button">Lue lisää</a>
         </div>
     </div>
+<section>
 <div class="tietoa-meistä">
     <div class="sisältö">
         <div class="row">
@@ -111,7 +112,7 @@
 				valikoima. Bootstrap sivulla on joitain eri juttuja kuin etusivulla, esimerkiksi kirjautumis/rekisteröitymis napit.</p>
 					
 		<ul class="tekniikat">
-			<li><strong>Mitä uusia tekniikoita sivulla on käytetty?</strong></li>
+			<li><strong>Esimerkkejä siitä mitä uusia tekniikoita sivulla on käytetty:</strong></li>
 			<li>-Osiossa "hero" on käytetty
 			"background: linear-gradient(rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0.411)), url('taide.png') no-repeat center / cover;"</li>
 			<li>-taideteos kuvissa käytetty "transform"</li>
@@ -123,9 +124,10 @@
         </div>
     </div>
 </div>
+</section>
+</main>
 <footer>
 <p>Copyright ©2023; Designed by Janette</p>
 </footer>
-</main>
 </body>
 </html>
