--- a/projekti/projekti2.html
+++ b/projekti/projekti2.html
@@ -21,7 +21,7 @@
             <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
 			<h1>LuovaTaide</h1>
           </a>
-
+		<nav>
           <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
             <li>
               <a href="#" class="text nav-link text-white">
@@ -54,6 +54,7 @@
               </a>
             </li>
           </ul>
+		 </nav>
         </div>
       </div>
     </div>
@@ -72,6 +73,7 @@
   </header>
   
   <main>
+  <section>
   <div class="row">
 	<div class="col-md-12">
 		<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -128,6 +130,8 @@
   </div>
 	</div>
 </div>
+</section>
+<section>
 <h2 class="taideteokset">Taideteokset</h2>
 <div class="osio2 row">
 	<div class="col-md-6">
@@ -158,6 +162,8 @@
     </div>
 	</div>
 </div>
+</section>
+<section>
 <div class="row">
 	<div class="col-md-6">
 		<hr class="featurette-divider">
@@ -188,6 +194,8 @@
 	</div>
 </div>
 </div>
+</section>
+<section>
  <div class="osio3 row">
  <h2 class="kokonaisuudet">Tutustu erilaisiin kokonaisuuksiin</h2>
 	<div class="col-md-4">
@@ -239,21 +247,22 @@
             </div>
           </div>
         </div>
-	</div>
-	
+	</div>	
 </div>
+</section>
+<section>
    <hr class="col-3 col-md-2 mb-5">
 
     <div class="viimeinen row">
-      <div class="col-md-6">
+      <div class="lista1 col-md-6">
         <h2>Sisusta jo tänään</h2>
         <ul class="lista icon-list">
           <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Suunnittele itse</a></li>
-          <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Ota yhteyttä meihin</a></li>
+		  <li><a href="https://github.com/twbs/bootstrap-npm-starter" rel="noopener" target="_blank">Ota yhteyttä meihin</a></li>
         </ul>
       </div>
 
-      <div class="col-md-6">
+      <div class="lista2 col-md-6">
         <h2>Ostajalle</h2>
         <ul class="icon-list">
           <li><a href="../getting-started/introduction/">Hae taidetta</a></li>
@@ -264,6 +273,7 @@
       </div>
     </div>
 </div>
+</section>
 </main>
  <footer class="container">
     <p class="float-end"><a href="#">Etusivulle</a></p>
