--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -18,7 +18,7 @@
             <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
 			<h1>LuovaTaide</h1>
           </a>
-
+		<nav>
           <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
             <li>
               <a href="#" class="nav-link text-secondary">
@@ -54,6 +54,7 @@
         </div>
       </div>
     </div>
+	</nav>
     <div class="px-3 py-2 border-bottom mb-3">
       <div class="container d-flex flex-wrap justify-content-center">
         <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto">
@@ -69,6 +70,7 @@
   </header>
   
   </main>
+  <section>
   <div class="karuselli row">
 	<div class="col-md-12">
 		<h2><div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -125,14 +127,16 @@
   </div></h2>
 	</div>
 </div>
+</section>
+<section>
 <div class="row">
 	<div class="col-md-6">
 		<hr class="featurette-divider">
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading">Bootstrap plussat</h2>
+        <p class="lead">nopea, laaja valmiita tyylejä, pystyy räätälöimään ja toimii eri selaimilla ja laitteilla, yleinen toimivuus</p>
       </div>
       <div class="col-md-5">
       <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
@@ -144,8 +148,8 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">Taideteos</h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading">Bootstrap miinukset</h2>
+        <p class="lead">raskas, isot Bs-tiedostot ladataan, komponentit rajoittaa luovuttaa ja bootstrapin käyttö saattaa lisätä sivuston latausaikaa, koska se sisältää paljon valmiita tyylejä ja skriptejä</p>
       </div>
       <div class="col-md-5">
       <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
@@ -184,6 +188,8 @@
 	</div>
 </div>
 </div>
+</section>
+<section>
  <div class="osio3 row">
 	<div class="col-md-4">
 		 <div class="col">
@@ -240,8 +246,9 @@
           </div>
         </div>
 	</div>
-	
 </div>
+</section>
+<section>
    <hr class="col-3 col-md-2 mb-5">
 
     <div class="row">
@@ -266,13 +273,13 @@
       </div>
     </div>
 </div>
-  <footer class="container">
-    <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; 2017–2021 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-  </footer>
+</section>
+</main>
+<footer class="container">
+   <p class="float-end"><a href="#">Back to top</a></p>
+   <p>&copy; 2017–2021 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+</footer>
 
 
     <script src="../assets/dist/js/bootstrap.bundle.mi
-
-</main>
 </body>
