--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<li><a href="omasivu/omasivu.html">oma eka sivu</a></li>
 		<li><a href="galleria/galleria/index.html">Galleria-sivun CSS-muotoilu</a></li>
 		<li><a href="desing-tehtava-versio-2/index.html">Design-tehtävä</a></li>
-		<li><a href="bootstrap/bootstrap.html">Bootstrap</a></li>
+		<li><a href="bootstrap/bootstrap.html">Bootstrap (ensimmäinen harjoitusversio)</a></li>
 		<img src="internet.png" alt="internet">
     </ul>
 </body>
