--- a/projekti/projekti.html
+++ b/projekti/projekti.html
@@ -97,6 +97,7 @@
             <a href="" class="button">Lue lisää</a>
         </div>
     </div>
+</div>
 <section>
 <div class="tietoa-meistä">
     <div class="sisältö">
@@ -108,7 +109,7 @@
 				satoja erilaisia maalauksia. Lisäksi asiakas voi itse suunnitella
 				maalauksen toiveidensa mukaan. Lisäksi LuovaTaide tarjoaa apua maalausten
 				etsimisessä ja kodin sisustamisessa.</p>
-				<p><strong/>"Osta nyt"</strong> kohdasta pääsee bootstrap sivulle, jossa näkyy tarkemmin taideverkkokaupan
+				<p><strong>"Osta nyt"</strong> kohdasta pääsee bootstrap sivulle, jossa näkyy tarkemmin taideverkkokaupan
 				valikoima. Bootstrap sivulla on joitain eri juttuja kuin etusivulla, esimerkiksi kirjautumis/rekisteröitymis napit.</p>
 					
 		<ul class="tekniikat">
@@ -125,7 +126,7 @@
     </div>
 </div>
 </section>
-</main>
+	</main>
 <footer>
 <p>Copyright ©2023; Designed by Janette</p>
 </footer>
