--- a/projekti/projekti2.html
+++ b/projekti/projekti2.html
@@ -89,7 +89,7 @@
 
         <div class="container">
           <div class="tekstit carousel-caption text-start">
-            <h1>Rekisteröidy nyt</h1>
+            <h2>Rekisteröidy nyt</h2>
             <p>Voit seurata tilaustasi helposti tekemällä käyttäjätilin.</p>
             <p><a class="nappula btn btn-lg btn-primary" href="#">Luo tili tänään</a></p>
           </div>
@@ -100,7 +100,7 @@
       
         <div class="container">
           <div class="tekstit carousel-caption">
-            <h1>Suunnittele itse</h1>
+            <h2>Suunnittele itse</h2>
             <p>Eikö sopivaa maalausta löydy? Räätälöimme upeat ja ainutalaatuiset taulut
 			juuri sinun toiveidesi mukaan.</p>
             <p><a class="nappula btn btn-lg btn-primary" href="#">Lue lisää</a></p>
@@ -112,7 +112,7 @@
 
         <div class="container">
           <div class="tekstit carousel-caption text-end">
-            <h1>Satoja eri maalauksia tarjolla</h1>
+            <h2>Satoja eri maalauksia tarjolla</h2>
             <p>Tarjoamme laajan valikoiman eri kokoisia maalauksia</p>
             <p><a class="nappula btn btn-lg btn-primary" href="#">Selaa valikoimaa</a></p>
           </div>
@@ -184,7 +184,7 @@
 
     <div class="osio row featurette">
       <div class="col-md-7">
-        <h2 <h2 class="otsikko featurette-heading">Taideteos</h2>
+        <h2 class="otsikko featurette-heading">Taideteos</h2>
         <p class="kuvailu lead">Taideteos, joka tuo vahvasti punaisen sävyn esiin.</p>
       </div>
       <div class="col-md-5">
@@ -192,7 +192,6 @@
       </div>
     </div>
 	</div>
-</div>
 </div>
 </section>
 <section>
@@ -272,7 +271,6 @@
         </ul>
       </div>
     </div>
-</div>
 </section>
 </main>
  <footer class="container">
